      Translations and images required by the GUI are now sub-packages of
      'mcomix'. 

      A setuptools-based setup.py replaces install.py. This should help for
      uniform installs across different operating systems.

    - Added support for the 7zip archive format. As with rar/unrar, this
      requires the "7z" executable being installed and on PATH.

MComix 0.90 Initial Release

    - Changed the mechanism of page flipping.

    - Added preferences to allow changing scrolling amount with arrow keys and mouse scroll button.

    - Added auto scrolling functionality.

    - Changed automatic background color selection algorithm to random sampling instead of
      only edge sampling.

    - Fixed non-recognition of pbm, pgm, and ppm images in archives.

    - Added save and quit functionality.

    - Added crash recovery.
    
    - Added bookmark sorting.

    - Added changed focus page protection option.
    
    - Added refresh button and capability.
    
    - Added color preference and selection for thumbnail bar background color.

    - Fixed lens not magnifying the enhanced image.

    - Added file deletion to the Library right-click option window.

    - Added recursive book adding in the Library (if you select more than one folder in the
      book selection window.

    - Split each file to only contain one class per file (except labels.py).

    - Fixed file name ampersand encoding error.
    
    - Added page selector with page preview.

    - Added preference regarding the number of keys pressed needed to flip the page.

    - Added next archive and previous archive buttons.

    - Added copy (CTRL+C) functionality which allows copying of the current image.

    - Added thumbnail cacheing and threading.

    - Added threaded page cacheing and cacheing preferences.
    
    - Added the preference to turn on/off page number display.
    
Comix is forked and becomes MComix

Comix 4.0.5
            